@@ -1,3 +1,9 @@
+2002-02-28  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSUser.m: rewrite user and defaults root code to standardise
+	and to use .GNUsteprc configuration.  Also permit forcing of fixed
+	roots at compile time.
+
 Thu Feb 28 16:46:31 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Changed
